--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/D.U.C.K..js?cachebust=918577610"></script>
+        <script type="text/javascript" src="duck/D.U.C.K..js?cachebust=1732016783"></script>
 
         <!-- Builtin injector for injecting runner path -->
         
